crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-returns_DOC202_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC202 Docstring should not have a returns section because the function doesn't return anything
  --> DOC202_google.py:14:5
   |
12 |   # DOC202
13 |   def foo(num: int) -> str:
14 | /     """
15 | |     Do something
16 | |
17 | |     Args:
18 | |         num (int): A number
19 | |
20 | |     Returns:
21 | |         str: A string
22 | |     """
   | |_______^
23 |       print('test')
help: Remove the "Returns" section

DOC202 Docstring should not have a returns section because the function doesn't return anything
  --> DOC202_google.py:30:9
   |
28 |       # DOC202
29 |       def foo(self) -> str:
30 | /         """
31 | |         Do something
32 | |
33 | |         Args:
34 | |             num (int): A number
35 | |
36 | |         Returns:
37 | |             str: A string
38 | |         """
   | |___________^
39 |           print('test')
help: Remove the "Returns" section

DOC202 Docstring should not have a returns section because the function doesn't return anything
  --> DOC202_google.py:80:5
   |
78 |   # DOC202 -- never explicitly returns anything, just short-circuits
79 |   def foo(s: str, condition: bool):
80 | /     """Fooey things.
81 | |
82 | |     Returns:
83 | |         None
84 | |     """
   | |_______^
85 |       if not condition:
86 |           return
help: Remove the "Returns" section
